# gl-examples-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  rust.yml
assets/models/cerberus/: cerberus.glb
assets/sdr/: blinn_phong.vert.spv  gaussian_blur_vertical.frag  gaussian_blur_vertical.frag.spv  pbs.frag  pbs.frag.spv  pbs_pom.frag  pbs_pom.frag.spv  pbs_pom.vert  skybox.frag.spv  skybox.vert  skybox.vert.spv
assets/sdr/include/: pbs_common.glsl
assets/shaders/: bloom.frag  dof.frag  fullscreen.vert  gaussian_blur_horizontal.frag  pbs.frag  pbs.vert  tonemap.frag
assets/textures/: cave_wall_4k.hdr  hall_of_mammals_4k.hdr  kloofendal_48d_partly_cloudy_4k.hdr  museum_of_ethnography_4k.hdr  pillars_4k.hdr
assets/textures/dds/: ibl_skybox.dds  ibl_skybox_negx.dds  ibl_skybox_negy.dds  ibl_skybox_negz.dds  ibl_skybox_posx.dds  ibl_skybox_posy.dds  ibl_skybox_posz.dds
examples/assets/sdr/: blinn_phong.frag  blinn_phong.frag.spv  blinn_phong.vert  blinn_phong.vert.spv  bloom_dual_filtering_blur_downsample.frag.spv  fullscreen.vert.spv  gaussian_blur_horizontal.frag  gaussian_blur_horizontal.frag.spv  gaussian_blur_vertical.frag  pbs.frag  (+14 more)
examples/pbs/: Cargo.toml  README.md  main.rs  pbs_scene.rs  settings.ron
examples/pom/: README.md  main.rs  pom_scene.rs  settings.ron
gl_bindings/: Cargo.toml  build.rs
gl_bindings/src/: lib.rs
pbs_engine/: Cargo.toml
pbs_engine/src/: lib.rs
pbs_engine/src/core/: application.rs  asset.rs  camera.rs  engine.rs  math.rs  messaging.rs  mod.rs  model_loader.rs  scene.rs  thread.rs  timer.rs  window.rs
pbs_engine/src/core/rendering/: buffer.rs  format.rs  framebuffer.rs  image.rs  light.rs  material.rs  mesh.rs  mod.rs  program_pipeline.rs  sampler.rs  shader.rs  state.rs  texture.rs
pbs_engine/src/rendering/: format.rs  framebuffer.rs  light.rs  material.rs  mesh.rs  program_pipeline.rs  state.rs
pbs_gl/: Cargo.toml  build.rs
pbs_gl/src/: lib.rs
sdr/: blinn_phong.frag  blinn_phong.vert  fullscreen.vert  pbs.frag  pbs.vert  pbs.vert.spv  simple_blinn_phong.frag  simple_blinn_phong.vert  sky.frag  sky.vert  skybox.vert  tonemap.frag
src/: lib.rs  main.rs  pbs_application.rs  pbs_scene.rs
src/core/: application.rs  asset.rs  camera.rs  engine.rs  entity.rs  event.rs  input.rs  math.rs  messaging.rs  mod.rs  model_loader.rs  scene.rs  timer.rs  window.rs
src/imgui/: mod.rs
src/rendering/: buffer.rs  color.rs  device.rs  format.rs  framebuffer.rs  light.rs  material.rs  mesh.rs  mod.rs  program_pipeline.rs  sampler.rs  shader.rs  state.rs  texture.rs
(+47 files in other folders)
