[package]
name = "engine"
version = "0.1.0"
authors = ["Angelos Gkountis <agelosbb@gmail.com>"]
edition = "2018"

[dependencies]
nalgebra-glm = "^0.5.0"
bitflags = "^1.0.0"
image = "^0.22.0"
gli-rs = "^0.3.0"
crossbeam-channel = "^0.4.0"
assimp = "0.3.1"
glutin = "^0.24.0"
gl_bindings = {path = "gl_bindings"}
