[package]
name = "engine"
version = "0.1.0"
authors = ["Angelos Gkountis <angelos.gkountis@gmail.com>"]
edition = "2018"

[features]
default = []
auto-compile-spirv = []


[dependencies]
nalgebra-glm = "^0.5.0"
bitflags = "^1.0.0"
image = "^0.22.0"
gli-rs = "^0.3.0"
assimp = "0.3.1"
glutin = "^0.24.0"
gl_bindings = {path = "gl_bindings"}
imgui = "0.4.0"
imgui-winit-support = "0.4.0"
imgui-opengl-renderer = "0.8.0"

[build-dependencies]
glob = "^0.3.0"
