[package]
name = "engine"
version = "0.1.0"
authors = ["Angelos Gkountis <angelos.gkountis@gmail.com>"]
edition = "2018"

[features]
default = []
use-spirv = []
auto-compile-spirv = []

[dependencies]
serde = "^1.0.0"
ron = "^0.6.0"
lazy_static = "^1.4.0"
mint = "0.5.6"
nalgebra = { version = "0.29.0", features = ["mint"] }
nalgebra-glm = { version = "^0.15.0", features = ["serde-serialize"] }
bitflags = "^1.0.0"
image = "^0.22.0"
gli-rs = "^0.4.0"
glutin = "^0.27.0"
gl_bindings = {path = "gl_bindings"}
crevice = "0.7.1"
imgui = "^0.8.0"
imgui-winit-support = "^0.8.0"
imgui-opengl-renderer = { git = "https://github.com/agkountis/rust-imgui-opengl-renderer" }

[dependencies.gltf]
version = "^0.15"
features = ["extras", "names", "utils"]

[build-dependencies]
glob = "^0.3.0"
